--- a/hardening.yml
+++ b/hardening.yml
@@ -1,7 +1,12 @@
 - name: Harden Linux VMs
   hosts: all
   tasks:
+  - name: Run equivalent of apt-get update
+    apt:
+      become: yes
+      update_cache: yes
   - name: Upgrade all packages to latest versions
     apt:
+      become: yes
       name: "*"
       state: latest
