--- a/hardening.yml
+++ b/hardening.yml
@@ -16,7 +16,7 @@
   vars:
     ansible_become: true
   roles:
-  - role: ansible_hardening
+  - role: ansible-hardening
     vars:
       stig_version: rhel7
       security_enable_pwquality_password_set: yes
