--- a/dns.yml
+++ b/dns.yml
@@ -6,22 +6,23 @@
   
   - name: Update Package lists
     hosts: dns servers
-#
     tasks:
     - name: Run equivalent of apt-get update
       apt:
         update_cache: yes
     - name: Ensure latest Dnsmasq package
-#      become: yes
       ansible.builtin.package:
         name:
           - Dnsmasq
         state: latest
 
   - name: Deconflict systemd-resolve by disabling/stopping the daemon
-#    become: yes
     ansible.builtin.systemd:
       name:
         - systemd-resolved
       enable: no
       state: stopped
+
+  # - name: Configure Dnsmasq config file
+  #   ansible.builtin.lineinfile:
+  #     name: 
