--- a/dns.yml
+++ b/dns.yml
@@ -7,12 +7,12 @@
     - name: Deconflict systemd-resolve by disabling/stopping the daemon
       ansible.builtin.systemd:
         name: systemd-resolved.service
-        state: stopped
+        state: started
 
-    # - name: Update Package lists
-    #   become: yes
-    #   apt:
-    #     update_cache: yes
+    - name: Update Package lists
+      become: yes
+      apt:
+        update_cache: yes
     
     - name: Ensure latest Dnsmasq package
       become: yes
