--- a/dns.yml
+++ b/dns.yml
@@ -4,10 +4,10 @@
   become: yes
   tasks:
 
-    - name: Deconflict systemd-resolve by disabling/stopping the daemon
-      ansible.builtin.systemd:
-        name: systemd-resolved.service
-        state: started
+    # - name: Deconflict systemd-resolve by disabling/stopping the daemon
+    #   ansible.builtin.systemd:
+    #     name: systemd-resolved.service
+    #     state: started
 
     - name: Update Package lists
       become: yes
