--- a/dns.yml
+++ b/dns.yml
@@ -29,11 +29,20 @@
         insertafter: '#port='
         line: Port=53
 
-    - name: Template a file to /etc/file.conf
+    - name: Template a file to /etc/dnsmasq.conf
       become: yes
       ansible.builtin.template:
         src: ./Templates/dnsmasq.conf
         dest: /etc/dnsmasq.conf
+        owner: root
+        group: root
+        mode: '0644'
+
+    - name: Template a file to /etc/hosts
+      become: yes
+      ansible.builtin.template:
+        src: ./Templates/hosts
+        dest: /etc/host
         owner: root
         group: root
         mode: '0644'
