add all hosts to hosts template

--- a/dns.yml
+++ b/dns.yml
@@ -39,6 +39,7 @@
         mode: '0644'
 
     - name: Template a file to /etc/hosts
+      hosts: all
       become: yes
       ansible.builtin.template:
         src: ./Templates/hosts
