--- a/dns.yml
+++ b/dns.yml
@@ -27,8 +27,8 @@
         group: root
         mode: '0644'
 
-    - name: Configure NetworkManager.conf to use dnsmasq
-      become: yes
+    # - name: Configure NetworkManager.conf to use dnsmasq
+    #   become: yes
 
 
 - name: Configure hosts list on all nodes
