--- a/dns.yml
+++ b/dns.yml
@@ -1,5 +1,5 @@
 ---
-- name: Configure Dnsmasq on Host2
+- name: Configure Dnsmasq on Host1
   hosts: dns_servers
   become: yes
   tasks:
@@ -48,6 +48,7 @@
 - name: Disable systemd-resolved.service
   hosts: dns_servers
   become: yes
+  tags: services
   tasks:
 
     - name: Deconflict systemd-resolve by disabling/stopping the daemon
