elevate privileges to edit samba.conf

--- a/samba.yml
+++ b/samba.yml
@@ -24,6 +24,7 @@
 
     - name: Update Samba configuration file
       ansible.builtin.blockinfile:
+        become: yes
         path: /etc/samba/smb.conf
         backup: yes
         insertafter: EOF
