--- a/samba.yml
+++ b/samba.yml
@@ -4,37 +4,49 @@
   become: yes
   tasks:
 
-    - name: Update Packages
-      apt:
-        update_cache: yes
-      tags:
-      - update
+  - name: Update Packages
+    apt:
+      update_cache: yes
+    tags:
+    - update
 
-    - name: Ensure latest Samba package
-      ansible.builtin.package:
-        name:
-          - samba
-        state: latest
+  - name: Ensure latest Samba package
+    ansible.builtin.package:
+      name:
+        - samba
+      state: latest
 
-    - name: Create directory for share
-      ansible.builtin.file:
-        path: /home/sambashare
-        state: directory
-        mode: '0755'
+  - name: Create directory for share
+    ansible.builtin.file:
+      path: /home/sambashare
+      state: directory
+      mode: '0755'
 
-    - name: Update Samba configuration file
-      ansible.builtin.blockinfile:
-        path: /etc/samba/smb.conf
-        backup: yes
-        insertafter: EOF
-        block: |
-          [sambashare]
-            comment = Samba on Ubuntu
-            path = /home/username/sambashare
-            read only = no
-            browsable = yes
+  - name: Update Samba configuration file
+    ansible.builtin.blockinfile:
+      path: /etc/samba/smb.conf
+      backup: yes
+      insertafter: EOF
+      block: |
+        [sambashare]
+          comment = Samba on Ubuntu
+          path = /home/username/sambashare
+          read only = no
+          browsable = yes
 
-    - name: Restart samba service
-      ansible.builtin.systemd:
-        name: smbd.service
-        state: restarted
+  - name: Restart samba service
+    ansible.builtin.systemd:
+       name: smbd.service
+       state: restarted
+
+- name: Configure Samba clients
+  hosts: samba_clients
+  become: yes
+  tasks:
+
+  - name: Mount Samba share from Host2
+    mount:
+      state: "mounted"
+      fstype: "samba"
+      name: /mnt/sambashare
+      src: "//10.1.2.5/sambashare"
