--- a/dns.yml
+++ b/dns.yml
@@ -50,7 +50,7 @@
   - name: Deconflict systemd-resolve by disabling/stopping the daemon
     ansible.builtin.systemd:
       name: systemd-resolved.service
-      state: started
+      state: stopped
       masked: no
 
   - name: Restart dnsmasq.service
