--- a/sambarole.yml
+++ b/sambarole.yml
@@ -1,6 +1,6 @@
 ---
 - name: Converge
-  hosts: all
+  hosts: file_servers
   pre_tasks:
     - name: Ensure package database is up-to-date
       apt:
