--- a/sambarole.yml
+++ b/sambarole.yml
@@ -1,6 +1,7 @@
 ---
 - name: Converge
   hosts: file_servers
+  become: yes
   pre_tasks:
     - name: Ensure package database is up-to-date
       apt:
